commit and push